Maak swipe voor gsm

--- a/s0203020-snake/index.html
+++ b/s0203020-snake/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="src/css/site.css">
 </head>
 
-<body style="background-color: rgba(39, 33, 33, 0.89);">
+<body style="background-color: rgba(39, 33, 33, 0.89);" id="swipe-detector">
     <!-- Nav tabs -->
     <nav class="navbar navbar-dark nav-custom">
         <a class="navbar-brand"><img class="snake-logo" src="./src/assets/snake.png"></a>
